# financial-derivatives-montecarlo

./: CMakeLists.txt  README.md  colab_build.sh  gen_informe.py  gen_informe_completo.py  methods_cuda.cu  methods_cuda.cuh  models.hpp  payoffs.hpp  utils.cpp  utils.hpp
examples/: ejemplo01_european.cpp  ejemplo02_asian.cpp  ejemplo03_lookback.cpp  ejemplo04_barrier.cpp  ejemplo05_heston.cpp  ejemplo06_dupire.cpp  ejemplo07_basket_uncorr.cpp  ejemplo08_basket_corr.cpp  ejemplo09_asian_cv.cpp  ejemplo10_dupire_cv.cpp  ejemplo11_otm_is.cpp
informes_finales/: README.txt  informe_completo_mlmc_mlqmc.txt  informe_completo_sin_mc_qr.txt  informe_completo_sin_mc_v2.txt  informe_final.txt
results/: barrido_mlmc_mlqmc.txt  barrido_precision.txt  barrido_sin_mc.txt  barrido_sin_mc_mlmc.txt  barrido_sin_mc_mlmc_v2.txt  barrido_sin_mc_qr.txt  barrido_sin_mc_v2.txt  informe_completo.txt  informe_completo_sin_mc.txt  informe_completo_sin_mc_mlmc.txt  informe_completo_sin_mc_mlmc_v2.txt
